--- a/cronvis.cabal
+++ b/cronvis.cabal
@@ -3,8 +3,8 @@
 
 name:                cronvis
 version:             0.1.0.0
-synopsis:            cronvis foo todo
--- description:
+synopsis:            cronvis filename startDate endDate
+description:         create syslog execution analysis as CSV file from syslog logfile
 license:             Apache-2.0
 license-file:        LICENSE
 author:              Marcus Geiger
@@ -16,9 +16,9 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable cronvis
-  -- main-is:
+  main-is: cronvis.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       time, old-locale, regex-compat, containers, base >=4.6 && <4.7
   -- hs-source-dirs:
   default-language:    Haskell2010
